# pokebeth

./: Cargo.toml  Dockerfile  README.md  test.sh  translate.sh
src/: main.rs  pokeapi.rs  shakespeare.rs
